--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ img {
   border: 1px solid gray;
   padding: 2px;
   margin: 0 10px 10px 10px;
+  width: 300px;
 }
 .bal {
   float: left;
@@ -39,4 +40,18 @@ img {
 
 .clear {
   clear: both;
+}
+.menu{
+  text-decoration: none;
+  padding: 10px;
+  background-color: aliceblue;
+  border: 1px solid grey;
+  margin: 5px;
+}
+ul a{
+  text-decoration: none;
+  color: #272f32;
+}
+a:hover{
+  color: red;
 }
